# cordl

./: .gitignore  Cargo.toml  README.md
cordl_internals/: field-utils.hpp  unity-utils.hpp
cordl_internals_rs/: Cargo_template.toml
src/: main.rs
src/data/: mod.rs  name_components.rs  name_resolver.rs  type_resolver.rs
src/generate/: config.rs  context.rs  context_collection.rs  cpp_type.rs  cs_context_collection.rs  cs_fields.rs  cs_members.rs  cs_type.rs  cs_type_tag.rs  members.rs  members_serialize.rs  metadata.rs  mod.rs  type_extensions.rs  writer.rs
src/generate/cpp/: config.rs  cpp_context.rs  cpp_context_collection.rs  cpp_fields.rs  cpp_main.rs  cpp_members.rs  cpp_members_serialize.rs  cpp_name_components.rs  cpp_name_resolver.rs  cpp_type.rs  mod.rs
src/generate/cpp/handlers/: comment_omit.rs  il2cpp_internals.rs  object.rs  unity.rs  value_type.rs
src/generate/json/: json_data.rs  json_gen.rs  json_name_resolver.rs  mod.rs
src/generate/offsets/: mod.rs  offsets_29.rs  offsets_31.rs
src/generate/rust/: config.rs  mod.rs  rust_context.rs  rust_context_collection.rs  rust_fields.rs  rust_main.rs  rust_members.rs  rust_members_serialize.rs  rust_name_components.rs  rust_name_resolver.rs  rust_type.rs
src/handlers/: comment_omit.rs  field_offset_omit.rs  il2cpp_internals.rs  mod.rs  object.rs  unity.rs  value_type.rs
src/helpers/: cursor.rs
src/json/: json_gen.rs  mod.rs
