[package]
name = "cordl"
author = "Sc2ad"
version = "0.1.0"
edition = "2021"


[features]
default = ["il2cpp_v31"]
il2cpp_v31 = []
il2cpp_v29 = []

[dependencies]
brocolib = { git = "https://github.com/Stackdoubleflow/brocolib.git", branch = "il2cpp_v31" }
clap = { version = "4", features = ["derive"] }
indent_write = { version = "*" }
color-eyre = "0.6"
itertools = "0.13"
bytes = "*"
byteorder = "1"
topological-sort = "0.2"
fs_extra = "*"
include_dir= "*"

# utils
pathdiff = "0.2"
walkdir = "2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rayon = "1.8"
filesize = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profiles.release]
opt-level = 3
lto = true
